# sed

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  dist-workspace.toml
.github/workflows/: GnuComment.yml  GnuTests.yml  audit.yml  benchmarks.yml  ci.yml  code-quality.yml  fuzzing.yml  ignore-intermittent.txt  release.yml
benches/: sed_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_sed.rs
fuzz/fuzz_targets/fuzz_common/: mod.rs  pretty_print.rs
src/: lib.rs
src/sed/: command.rs  compiler.rs  delimited_parser.rs  error_handling.rs  fast_io.rs  fast_regex.rs  in_place.rs  mod.rs  named_writer.rs  processor.rs  script_char_provider.rs  script_line_provider.rs
src/uu/sed/: Cargo.toml  sed.md
src/uu/sed/src/: command.rs  compiler.rs  delimited_compiler.rs  delimited_parser.rs  error_handling.rs  escape_compiler.rs  fast_io.rs  fast_regex.rs  in_place.rs  multi_io.rs  named_writer.rs  processor.rs  script_char_provider.rs  script_line_provider.rs  sed.rs
tests/: tests.rs
tests/by-util/: test_sed.rs
tests/common/: util.rs
tests/fixtures/sed/input/: ascii  dots-4k.txt  dots-64k.txt  dots-8k.txt  expression1  hanoi  lines2  pi  regex_quantifiers  unicode
tests/fixtures/sed/output/: addr_empty_re_reuse  addr_first_separate  addr_last_separate  addr_pattern_to_pattern_negate  addr_range_end_multiple  addr_range_even  addr_range_from_zero_to_pattern  addr_range_numeric_negate  addr_range_odd  addr_range_separate  addr_range_step_zero  addr_range_straddle  addr_three_lines_semicolon  addr_two_lines_semicolon  block_negative_range_2  branch_no_sub_clears  branch_no_sub_simple  bre_quantifier_only_closing_brace  cmd_read_one_addr  cmd_read_zero_addr  comment_no_silent  ere_quantifier_comma_n  ere_quantifier_exactly_m  ere_quantifier_m_to_n  ere_quantifier_minimum_m  list_ascii  list_unicode  mandelbrot  multiple_input_files  number_range  number_separate  pattern_append_delete2_separate  pattern_append_delete_2  pattern_delete_no_newline  pattern_delete_to_newline  pattern_next_print  pattern_next_print_output  pattern_print_to_newline  pattern_re_reuse  pattern_replace_append_empty_hold  (+28 more)
tests/fixtures/sed/script/: bach.sed  http-log-redact.sed  mandelbrot.sed
util/: bench-compare.sh  benchmark.sh  compare_test_results.py  run-gnu-testsuite.sh  test_compare_test_results.py
