[package]
name = "uu_sed"
version = "0.0.1"
edition = "2024"
authors = ["uutils developers"]
license = "MIT"
description = "sed ~ (uutils) stream editor for filtering/transforming text"

homepage = "https://github.com/uutils/sed"
repository = "https://github.com/uutils/sed/tree/main/src/uu/sed"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]


[dependencies]
clap = { workspace = true }
fancy-regex =  { workspace = true }
memchr = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
memmap2 = { workspace = true }
once_cell = { workspace = true }
terminal_size = { workspace = true }
uucore = { workspace = true }

[lib]
path = "src/sed.rs"

[[bin]]
name = "sed"
path = "src/main.rs"
